--- a/rekrutacja/css/style.css
+++ b/rekrutacja/css/style.css
@@ -246,7 +246,7 @@ footer img {
 
 /* responsive design */
 /* narrow device */
-@media only screen and (max-width: 1380px) {
+@media (max-width: 1380px) {
   header {
     width: 95%;
   }
@@ -267,7 +267,7 @@ footer img {
 
 /* mobile device */
 /* navbar only */
-@media (max-width: 1060px) {
+@media only screen and (max-width: 1060px) {
   nav {
     background-color: #0d0d0d;
     border-radius: 20px;
@@ -313,13 +313,13 @@ footer img {
 }
 
 /* side padding for article */
-@media (max-width: 950px) {
+@media only screen and (max-width: 950px) {
   .tab_title h1 {
     font-size: 230%;
   }
 
   .tab_title h2 {
-    font-size: 100%;
+    font-size: 120%;
   }
 
   .tab_title p {
